--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -96,6 +96,7 @@
   .btn {
     padding: 12px 24px;
     border: none;
+    margin-top: 32px;
     border-radius: 8px;
     font-size: 14px;
     font-weight: 500;
